--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucky Wheel - Win a Car!</title>
+    <title>Lucky Wheel - Win a Plane!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="wheel.css">
 </head>
